fix colab of disco

--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Install mmediting from source\n",
-    "%cd ../..\n",
+    "%git clone -b dev-1.x git@github.com:open-mmlab/mmediting.git\n",
     "!pip3 install -e .\n",
     "%cd configs/disco_diffusion"
    ]
