fix installing mmedit

--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -73,8 +73,12 @@
    "outputs": [],
    "source": [
     "# Install mmediting from source\n",
-    "%git clone -b dev-1.x git@github.com:open-mmlab/mmediting.git\n",
-    "!pip3 install -e .\n",
+    "%cd /content/\n",
+    "!rm -rf mmediting\n",
+    "!git clone -b dev-1.x https://github.com/open-mmlab/mmediting.git \n",
+    "%cd mmediting\n",
+    "!pip install -r requirements.txt\n",
+    "!pip install -e .\n",
     "%cd configs/disco_diffusion"
    ]
   },
