--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -51,8 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check PyTorch version\n",
-    "!pip3 list | grep torch"
+    "# Check PyTorch version and CLIP version\n",
+    "!pip list | grep torch\n",
+    "!pip list | grep clip"
    ]
   },
   {
@@ -62,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Install mmcv dependency via openmim\n",
-    "!pip3 install openmim\n",
+    "!pip install openmim\n",
     "!mim install 'mmcv>=2.0.0rc1'"
    ]
   },
@@ -96,20 +97,21 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import time  # 引入time模块\n",
     "from mmengine import Config, MODELS\n",
     "from mmedit.utils import register_all_modules\n",
     "from mmedit.registry import MODULES\n",
+    "from mmcv import tensor2imgs\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "from torchvision.transforms import ToPILImage, Normalize, Compose\n",
     "from IPython.display import Image\n",
     "\n",
-    "\n",
     "register_all_modules()\n",
     "\n",
+    "\n",
     "def show_tensor(image_tensor, index=0):\n",
-    "    normalized_image = ((image_tensor + 1. )/ 2.).clamp(0, 1)\n",
-    "    out = tensor2imgs(normalized_image*255, to_rgb=False)\n",
+    "    normalized_image = ((image_tensor + 1.) / 2.).clamp(0, 1)\n",
+    "    out = tensor2imgs(normalized_image * 255, to_rgb=False)\n",
     "    plt.imshow(out[index])\n",
     "    plt.show()\n"
    ]
@@ -120,7 +122,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "config = 'disco-diffusion_adm-u-finetuned_imagenet-512x512.py'\n",
     "disco = MODELS.build(Config.fromfile(config).model).cuda().eval()\n",
     "text_prompts = {\n",
@@ -147,7 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# image resolution\n",
     "image = disco.infer(width=768, height=1280, text_prompts=text_prompts, show_progress=True, num_inference_steps=num_inference_steps, eta=0.8, seed=seed)['samples']\n",
     "show_tensor(image)"
@@ -187,7 +187,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# clip guidance scale\n",
     "image = disco.infer(width=1280, height=768, text_prompts=text_prompts, show_progress=True, num_inference_steps=num_inference_steps, eta=0.8, clip_guidance_scale=8000, seed=seed)['samples']\n",
     "show_tensor(image)\n",
@@ -233,7 +232,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# # 512x512_diffusion_uncond_finetune_008100\n",
+    "# 512x512_diffusion_uncond_finetune_008100\n",
     "config = 'disco-diffusion_adm-u-finetuned_imagenet-512x512.py'\n",
     "disco = MODELS.build(Config.fromfile(config).model).cuda().eval()\n",
     "image = disco.infer(width=1280, height=768, text_prompts=text_prompts, show_progress=True, num_inference_steps=num_inference_steps, eta=0.8, seed=seed)['samples']\n",
