update model zoo

--- a/demo/mmediting_inference_tutorial.ipynb
+++ b/demo/mmediting_inference_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +35,7 @@
     "\n",
     "&emsp; [4.4 Inference of super resolution models](#44-inference-of-image-super-resolution-models)\n",
     "\n",
-    "&emsp; [4.5 Inference of image2image translation models](#45-inference-of-image-translation-models)\n",
+    "&emsp; [4.5 Inference of image2image models](#45-inference-of-image-translation-models)\n",
     "\n",
     "&emsp; [4.6 Inference of unconditional GANs models](#46-inference-of-unconditional-gan-models)\n",
     "\n",
@@ -261,12 +262,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 2. Check inference supported tasks and models\n",
     "\n",
-    "There are multiple task types in MMEditing: Matting, Inpainting, Video Super-Resolution, Image Super-Resolution, Image2Image Translation, Unconditional GANs, Conditional GANs, Video Interpolation. \n",
+    "There are multiple task types in MMEditing: Matting, Inpainting, Video Super-Resolution, Image Super-Resolution, Image2Image, Unconditional GANs, Conditional GANs, Video Interpolation. \n",
     "\n",
     "We provide some models for each task. All available models and tasks could be printed out like this."
    ]
@@ -303,7 +305,7 @@
     "print(supported_tasks)\n",
     "\n",
     "# print all supported models for one task, take image translation for example.\n",
-    "task_supported_models = MMEdit.get_task_supported_models('Image2Image Translation')\n",
+    "task_supported_models = MMEdit.get_task_supported_models('Image2Image')\n",
     "print('translation models:')\n",
     "print(task_supported_models)"
    ]
