[Feature] Support auto import modules from registry

--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "import torch\n",
     "from mmengine import Config, MODELS\n",
-    "from mmedit.utils import register_all_modules\n",
+    "from mmengine.registry import init_default_scope\n",
     "from mmedit.registry import MODULES\n",
     "from mmcv import tensor2imgs\n",
     "from matplotlib import pyplot as plt\n",
@@ -105,7 +105,7 @@
     "from torchvision.transforms import ToPILImage, Normalize, Compose\n",
     "from IPython.display import Image\n",
     "\n",
-    "register_all_modules()\n",
+    "init_default_scope('mmedit')\n",
     "\n",
     "\n",
     "def show_tensor(image_tensor, index=0):\n",
@@ -1417,7 +1417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 64-bit",
+   "display_name": "Python 3.8.13 ('mmedit2': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -1436,7 +1436,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ab5d8c58fa4ba0eabce645db4cbe37b4cabea4c937ae154ab72fe7cc84b68be8"
+    "hash": "5d897c5c52e082b514ee6f95b827618ca631a30c2bcba2887693dc2fed97e1f9"
    }
   }
  },
