[Doc] update documents links to main branch (#1733)
* [Doc] update documents links to main branch

* fix readme

* fix readme_zh

* fix docs

* fix migration

* fix migration

* modify to latest

* update changelog

--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -76,7 +76,7 @@
     "# Install mmediting from source\n",
     "%cd /content/\n",
     "!rm -rf mmediting\n",
-    "!git clone -b dev-1.x https://github.com/open-mmlab/mmediting.git \n",
+    "!git clone https://github.com/open-mmlab/mmediting.git \n",
     "%cd mmediting\n",
     "!pip install -r requirements.txt\n",
     "!pip install -e ."
