[Rename] update mmagic's configs

--- a/configs/disco_diffusion/tutorials.ipynb
+++ b/configs/disco_diffusion/tutorials.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install MMEditing"
+    "## Install MMagic"
    ]
   },
   {
@@ -73,11 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install mmediting from source\n",
+    "# Install mmagic from source\n",
     "%cd /content/\n",
-    "!rm -rf mmediting\n",
-    "!git clone https://github.com/open-mmlab/mmediting.git \n",
-    "%cd mmediting\n",
+    "!rm -rf mmagic\n",
+    "!git clone https://github.com/open-mmlab/mmagic.git \n",
+    "%cd mmagic\n",
     "!pip install -r requirements.txt\n",
     "!pip install -e ."
    ]
@@ -98,14 +98,14 @@
     "import torch\n",
     "from mmengine import Config, MODELS\n",
     "from mmengine.registry import init_default_scope\n",
-    "from mmedit.registry import MODULES\n",
+    "from mmagic.registry import MODULES\n",
     "from mmcv import tensor2imgs\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "from torchvision.transforms import ToPILImage, Normalize, Compose\n",
     "from IPython.display import Image\n",
     "\n",
-    "init_default_scope('mmedit')\n",
+    "init_default_scope('mmagic')\n",
     "\n",
     "\n",
     "def show_tensor(image_tensor, index=0):\n",
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mmedit.models.editors.disco_diffusion.guider import ImageTextGuider\n",
+    "from mmagic.models.editors.disco_diffusion.guider import ImageTextGuider\n",
     "\n",
     "\n",
     "config = 'configs/disco_diffusion/disco-diffusion_adm-u-finetuned_imagenet-512x512.py'\n",
