--- a/demo/mmagic_inference_tutorial.ipynb
+++ b/demo/mmagic_inference_tutorial.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "## 2. Check inference supported tasks and models\n",
     "\n",
-    "There are multiple task types in MMEditing: Matting, Inpainting, Video Super-Resolution, Image Super-Resolution, Image2Image, Unconditional GANs, Conditional GANs, Video Interpolation. \n",
+    "There are multiple task types in MMagic: Matting, Inpainting, Video Super-Resolution, Image Super-Resolution, Image2Image, Unconditional GANs, Conditional GANs, Video Interpolation. \n",
     "\n",
     "We provide some models for each task. All available models and tasks could be printed out like this."
    ]
@@ -160,25 +160,26 @@
     }
    ],
    "source": [
-    "from mmagic.edit import MMEdit\n",
+    "from mmagic.apis import MMagicInferencer\n",
     "\n",
     "# print all supported models for inference.\n",
-    "inference_supported_models = MMEdit.get_inference_supported_models()\n",
+    "inference_supported_models = MMagicInferencer.get_inference_supported_models()\n",
     "print('all supported models:')\n",
     "print(inference_supported_models)\n",
     "\n",
     "# print all supported tasks for inference.\n",
-    "supported_tasks = MMEdit.get_inference_supported_tasks()\n",
+    "supported_tasks = MMagicInferencer.get_inference_supported_tasks()\n",
     "print('all supported tasks:')\n",
     "print(supported_tasks)\n",
     "\n",
     "# print all supported models for one task, take image translation for example.\n",
-    "task_supported_models = MMEdit.get_task_supported_models('Image2Image')\n",
+    "task_supported_models = MMagicInferencer.get_task_supported_models('Image2Image')\n",
     "print('translation models:')\n",
     "print(task_supported_models)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +187,7 @@
     "\n",
     "Next we describe how to perform inference with python code snippets.\n",
     "\n",
-    "(We also provide command line interface for you to do inference by running mmediting_inference_demo.py. The usage of this interface could be found in [README.md](./README.md) and more guidance could be found in the [documentation](https://mmagic.readthedocs.io/en/latest/user_guides/3_inference.html#).)\n"
+    "(We also provide command line interface for you to do inference by running mmagic_inference_demo.py. The usage of this interface could be found in [README.md](./README.md) and more guidance could be found in the [documentation](https://mmagic.readthedocs.io/en/latest/user_guides/3_inference.html#).)\n"
    ]
   },
   {
@@ -327,6 +328,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,9 +336,9 @@
     "\n",
     "There are two steps:\n",
     "\n",
-    "First, create a MMEdit instance by a pretrained model name.\n",
+    "First, create a MMagicInferencer instance by a pretrained model name.\n",
     "\n",
-    "Second, infer your own image with this MMEdit instance. The translated image will be saved to result_out_dir."
+    "Second, infer your own image with this MMagicInferencer instance. The translated image will be saved to result_out_dir."
    ]
   },
   {
@@ -353,10 +355,10 @@
     }
    ],
    "source": [
-    "from mmagic.edit import MMEdit\n",
+    "from mmagic.apis import MMagicInferencer\n",
     "\n",
-    "# Create a MMEdit instance\n",
-    "editor = MMEdit('pix2pix')\n",
+    "# Create a MMagicInferencer instance\n",
+    "editor = MMagicInferencer('pix2pix')\n",
     "# Infer a image. Input image path and output image path is needed.\n",
     "results = editor.infer(img='../resources/input/translation/gt_mask_0.png', result_out_dir='../resources/output/translation/tutorial_translation_pix2pix_res.jpg')"
    ]
@@ -394,6 +396,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -403,7 +406,7 @@
     "\n",
     "Take conditional GAN model 'biggan' as an example. We have pretrained model for Cifar and Imagenet, and all pretrained models of 'biggan' are listed in its [metafile.yaml](../configs/biggan/metafile.yml)\n",
     "\n",
-    "You could configure different settings by passing 'model_setting' to 'MMEdit'. Every model's default setting is 0."
+    "You could configure different settings by passing 'model_setting' to 'MMagicInferencer'. Every model's default setting is 0."
    ]
   },
   {
@@ -431,12 +434,12 @@
    ],
    "source": [
     "import mmcv\n",
-    "import matplotlib.pyplot as plt \n",
-    "from mmagic.edit import MMEdit\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mmagic.apis import MMagicInferencer\n",
     "\n",
     "result_out_dir = '../resources/output/conditional/tutorial_conditinal_biggan_res_setting1.jpg'\n",
     "# configure setting to 1\n",
-    "editor = MMEdit('biggan', model_setting=1) \n",
+    "editor = MMagicInferencer('biggan', model_setting=1) \n",
     "results = editor.infer(label=1, result_out_dir=result_out_dir)\n",
     "\n",
     "# plot the result image\n",
@@ -446,6 +449,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -453,7 +457,7 @@
     "\n",
     "Some models may have extra parameters that could be configured to perform inference.\n",
     "\n",
-    "Take 'biggan' for example. You could configure 'num_batches' in a dict and pass it to 'MMEdit'."
+    "Take 'biggan' for example. You could configure 'num_batches' in a dict and pass it to 'MMagicInferencer'."
    ]
   },
   {
@@ -481,12 +485,12 @@
    ],
    "source": [
     "import mmcv\n",
-    "import matplotlib.pyplot as plt \n",
-    "from mmagic.edit import MMEdit\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mmagic.apis import MMagicInferencer\n",
     "\n",
     "result_out_dir = '../resources/output/conditional/tutorial_conditinal_biggan_res_sample6.jpg'\n",
     "# use a dict to pass the parameters, num_batches means images output num for one inference\n",
-    "editor = MMEdit('biggan', model_setting=1, extra_parameters={'num_batches':6}) \n",
+    "editor = MMagicInferencer('biggan', model_setting=1, extra_parameters={'num_batches':6}) \n",
     "results = editor.infer(label=1, result_out_dir=result_out_dir)\n",
     "\n",
     "# plot the result image and we could see 6 images in a inference batch\n",
@@ -517,11 +521,9 @@
     }
    ],
    "source": [
-    "import mmcv\n",
-    "import matplotlib.pyplot as plt \n",
-    "from mmagic.edit import MMEdit\n",
+    "from mmagic.apis import MMagicInferencer\n",
     "\n",
-    "editor = MMEdit('biggan', model_setting=1) \n",
+    "editor = MMagicInferencer('biggan', model_setting=1) \n",
     "editor.print_extra_parameters()\n",
     "# 'num_batches' and 'sample_model' are extra parameters in 'biggan' model."
    ]
